--- a/Widgets/WidgetDialog.css
+++ b/Widgets/WidgetDialog.css
@@ -18,7 +18,7 @@
 .WidgetDialogContent {
 	background: white;
 	overflow: hidden;
-	padding: 10px;
+	/* padding: 10px; */
 }
 
 .WidgetDialogHeader {
