--- a/Widgets/WidgetCompareTable.css
+++ b/Widgets/WidgetCompareTable.css
@@ -18,7 +18,7 @@
 .horizontalLayout {
   min-width: 130px;
   max-width: 150px;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .selectedObjectProperty {
